--- a/refactor/index.html
+++ b/refactor/index.html
@@ -1,7 +1,17 @@
 <html>
     <head>
+        <style>
+            body {background:black;color:white;font-family:arial;}
+            b {color:red}
+            li {padding:10px}
+            span {color: #32CD32}
+
+        </style>
         <script src="gilded_rose.js"></script>
         <script src="test.js"></script>
     </head>
-    <body></body>
+    <body>
+        <h3>Test Cases: Gilded Rose Kata</h3>
+        <ol id="testcases" start="0"></ol>
+    </body>
 </html>
