removes continue from loop

--- a/refactor/index.html
+++ b/refactor/index.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <style>
-            body {background:black;color:white;font-family:arial;}
+            body {background:black;color:white;font-family:arial}
             b {color:red}
             li {padding:10px}
             span {color: #32CD32}
-
         </style>
         <script src="gilded_rose.js"></script>
         <script src="test.js"></script>
